# immich-carddav-sync

./: .gitignore  Dockerfile  README.md  docker-build.sh  experiments.sh  generate-immich-client.sh  playground-carddav.py  playground-immich.py  playground-immich.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
cronjob/: Dockerfile  crontab.tmpl  entrypoint.sh
experiments/: experiments.sh
immich-client/: README.md  pyproject.toml
immich-client/immich_client/: __init__.py
immich-client/immich_client/models/: album_count_response_dto.py  all_job_status_response_dto.py  asset_bulk_upload_check_dto.py  asset_bulk_upload_check_item.py  asset_bulk_upload_check_result_action.py  asset_bulk_upload_check_result_reason.py  asset_ids_dto.py  asset_ids_response_dto.py  asset_ids_response_dto_error.py  asset_jobs_dto.py  asset_response_dto.py  asset_stats_response_dto.py  auth_device_response_dto.py  bulk_id_response_dto_error.py  change_password_dto.py  check_duplicate_asset_dto.py  check_duplicate_asset_response_dto.py  check_existing_assets_dto.py  check_existing_assets_response_dto.py  create_asset_dto.py  create_profile_image_response_dto.py  create_tag_dto.py  curated_locations_response_dto.py  curated_objects_response_dto.py  delete_asset_dto.py  delete_asset_status.py  download_info_dto.py  get_partners_direction.py  get_profile_image_response_200.py  import_asset_dto.py  job_command_dto.py  job_counts_dto.py  job_name.py  job_settings_dto.py  login_credential_dto.py  map_marker_response_dto.py  merge_person_dto.py  o_auth_config_dto.py  o_auth_config_response_dto.py  (+27 more)
immich_carddav_sync/: config.py  logger.py  main.py
immich_carddav_sync/immich_client/: README.md  __init__.py
(+590 files in other folders)
